sfdx-project/force-app/main/default/objects/BD_Action__c/BD_Action__c.object-meta.xml
<CustomObject>
    <description>Agent-recommended or human-logged outreach action on a Target Company.</description>
    <label>BD Action</label>
    <nameField>
        <displayFormat>BDA-{0000}</displayFormat>
        <label>BD Action</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BD Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>