sfdx-project/force-app/main/default/objects/BD_Action__c/fields/BD_Rep__c.field-meta.xml
<CustomField>
    <fullName>BD_Rep__c</fullName>
    <label>BD Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>BD Actions</relationshipLabel>
    <relationshipName>BD_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>