sfdx-project/force-app/main/default/objects/BD_Action__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Initiate Outreach</fullName><default>false</default><label>Initiate Outreach</label></value>
            <value><fullName>Follow Up</fullName><default>false</default><label>Follow Up</label></value>
            <value><fullName>Research Further</fullName><default>false</default><label>Research Further</label></value>
            <value><fullName>No Action</fullName><default>false</default><label>No Action</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>