sfdx-project/force-app/main/default/objects/BD_Action__c/fields/Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>Recommended_By__c</fullName>
    <label>Recommended By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Agent</fullName><default>true</default><label>Agent</label></value>
            <value><fullName>Human</fullName><default>false</default><label>Human</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>