sfdx-project/force-app/main/default/objects/BD_Action__c/fields/Score_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Score_Snapshot__c</fullName>
    <label>Score Snapshot</label>
    <referenceTo>Score_Snapshot__c</referenceTo>
    <relationshipLabel>BD Actions</relationshipLabel>
    <relationshipName>BD_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>